--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "node-starter",
   "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "pnpm -C vue-project i  && pnpm -C vue-project run dev"
   }
 }
